Fix spacing on homepage blog area

--- a/public/less/partials/posts.less
+++ b/public/less/partials/posts.less
@@ -1,5 +1,9 @@
 #writing {
 	text-align: center;
+
+	p.meta:first-child {
+		margin-top: 0;
+	}
 }
 
 .posts {
